--- a/Example - Suggest Online.ipynb
+++ b/Example - Suggest Online.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "e7b98237",
    "metadata": {},
    "outputs": [
@@ -19,58 +19,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting google-cloud-bigquery\n",
-      "  Downloading google_cloud_bigquery-3.6.0-py2.py3-none-any.whl (215 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m215.1/215.1 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting requests<3.0.0dev,>=2.21.0\n",
-      "  Using cached requests-2.28.2-py3-none-any.whl (62 kB)\n",
-      "Requirement already satisfied: python-dateutil<3.0dev,>=2.7.2 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from google-cloud-bigquery) (2.8.2)\n",
-      "Requirement already satisfied: packaging>=20.0.0 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from google-cloud-bigquery) (22.0)\n",
-      "Collecting grpcio<2.0dev,>=1.47.0\n",
-      "  Downloading grpcio-1.51.3.tar.gz (22.1 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m22.1/22.1 MB\u001b[0m \u001b[31m23.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting google-cloud-core<3.0.0dev,>=1.6.0\n",
-      "  Using cached google_cloud_core-2.3.2-py2.py3-none-any.whl (29 kB)\n",
-      "Collecting google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0dev,>=1.31.5\n",
-      "  Using cached google_api_core-2.11.0-py3-none-any.whl (120 kB)\n",
-      "Collecting proto-plus<2.0.0dev,>=1.15.0\n",
-      "  Using cached proto_plus-1.22.2-py3-none-any.whl (47 kB)\n",
-      "Collecting protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.19.5\n",
-      "  Using cached protobuf-4.22.0-cp37-abi3-macosx_10_9_universal2.whl (397 kB)\n",
-      "Collecting google-resumable-media<3.0dev,>=0.6.0\n",
-      "  Using cached google_resumable_media-2.4.1-py2.py3-none-any.whl (77 kB)\n",
-      "Collecting googleapis-common-protos<2.0dev,>=1.56.2\n",
-      "  Using cached googleapis_common_protos-1.58.0-py2.py3-none-any.whl (223 kB)\n",
-      "Collecting google-auth<3.0dev,>=2.14.1\n",
-      "  Downloading google_auth-2.16.2-py2.py3-none-any.whl (177 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m177.2/177.2 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting grpcio-status<2.0dev,>=1.33.2\n",
-      "  Downloading grpcio_status-1.51.3-py3-none-any.whl (5.1 kB)\n",
-      "Collecting google-crc32c<2.0dev,>=1.0\n",
-      "  Using cached google_crc32c-1.5.0-cp310-cp310-macosx_10_9_x86_64.whl (30 kB)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from python-dateutil<3.0dev,>=2.7.2->google-cloud-bigquery) (1.16.0)\n",
-      "Collecting urllib3<1.27,>=1.21.1\n",
-      "  Using cached urllib3-1.26.14-py2.py3-none-any.whl (140 kB)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from requests<3.0.0dev,>=2.21.0->google-cloud-bigquery) (2022.12.7)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from requests<3.0.0dev,>=2.21.0->google-cloud-bigquery) (3.4)\n",
-      "Collecting charset-normalizer<4,>=2\n",
-      "  Using cached charset_normalizer-3.0.1-cp310-cp310-macosx_10_9_x86_64.whl (124 kB)\n",
-      "Collecting pyasn1-modules>=0.2.1\n",
-      "  Using cached pyasn1_modules-0.2.8-py2.py3-none-any.whl (155 kB)\n",
-      "Collecting cachetools<6.0,>=2.0.0\n",
-      "  Using cached cachetools-5.3.0-py3-none-any.whl (9.3 kB)\n",
-      "Collecting rsa<5,>=3.1.4\n",
-      "  Using cached rsa-4.9-py3-none-any.whl (34 kB)\n",
-      "Collecting pyasn1<0.5.0,>=0.4.6\n",
-      "  Using cached pyasn1-0.4.8-py2.py3-none-any.whl (77 kB)\n",
-      "Building wheels for collected packages: grpcio\n",
-      "  Building wheel for grpcio (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for grpcio: filename=grpcio-1.51.3-cp310-cp310-macosx_10_10_x86_64.whl size=3897379 sha256=a178afb526e047e9b84c8e082572abbab048e8cd4184f8de6461ba76ab4746df\n",
-      "  Stored in directory: /Users/yyoo/Library/Caches/pip/wheels/b1/20/3f/73be4155cc6d9e773008f6f60caab18b672011a93754167880\n",
-      "Successfully built grpcio\n",
-      "Installing collected packages: pyasn1, charset-normalizer, urllib3, rsa, pyasn1-modules, protobuf, grpcio, google-crc32c, cachetools, requests, proto-plus, googleapis-common-protos, google-resumable-media, google-auth, grpcio-status, google-api-core, google-cloud-core, google-cloud-bigquery\n",
-      "Successfully installed cachetools-5.3.0 charset-normalizer-3.0.1 google-api-core-2.11.0 google-auth-2.16.2 google-cloud-bigquery-3.6.0 google-cloud-core-2.3.2 google-crc32c-1.5.0 google-resumable-media-2.4.1 googleapis-common-protos-1.58.0 grpcio-1.51.3 grpcio-status-1.51.3 proto-plus-1.22.2 protobuf-4.22.0 pyasn1-0.4.8 pyasn1-modules-0.2.8 requests-2.28.2 rsa-4.9 urllib3-1.26.14\n",
+      "Collecting db_dtypes\n",
+      "  Using cached db_dtypes-1.0.5-py2.py3-none-any.whl (14 kB)\n",
+      "Requirement already satisfied: packaging>=17.0 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from db_dtypes) (22.0)\n",
+      "Collecting pyarrow>=3.0.0\n",
+      "  Using cached pyarrow-11.0.0-cp310-cp310-macosx_10_14_x86_64.whl (24.4 MB)\n",
+      "Requirement already satisfied: numpy<2.0dev,>=1.16.6 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from db_dtypes) (1.24.2)\n",
+      "Requirement already satisfied: pandas<2.0dev,>=0.24.2 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from db_dtypes) (1.5.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from pandas<2.0dev,>=0.24.2->db_dtypes) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from pandas<2.0dev,>=0.24.2->db_dtypes) (2022.7.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas<2.0dev,>=0.24.2->db_dtypes) (1.16.0)\n",
+      "Installing collected packages: pyarrow, db_dtypes\n",
+      "Successfully installed db_dtypes-1.0.5 pyarrow-11.0.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -79,12 +39,13 @@
     "#possible libraries to install before using the diff-finder library. \n",
     "#They will be included in the requirement for the package later\n",
     "\n",
-    "#%pip install google-cloud-bigquery"
+    "#%pip install google-cloud-bigquery\n",
+    "#%pip install db_dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "30f392bc",
    "metadata": {},
    "outputs": [],
@@ -104,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "908c99e0",
    "metadata": {},
    "outputs": [
@@ -114,7 +75,7 @@
      "text": [
       "Your browser has been opened to visit:\n",
       "\n",
-      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=A9q8g7vU3n9NEcQtjrp6QNOoMoplQP&access_type=offline&code_challenge=fXUVa1-uwNHC23pmT4tn5bTuVtTVoIL7ep2C5iXHd28&code_challenge_method=S256\n",
+      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=jHZRkQK1FZpVasjraEtdC6qirAMrGs&access_type=offline&code_challenge=c5aocpEEAsHB6owgjdubYwe0qdYELjqcAhDuqoIqcQU&code_challenge_method=S256\n",
       "\n",
       "\n",
       "Application default credentials (ADC) were updated.\n",
@@ -124,9 +85,8 @@
       "  $ gcloud config set project PROJECT_ID\n",
       "\n",
       "\n",
-      "Updates are available for some Google Cloud CLI components.  To install them,\n",
-      "please run:\n",
-      "  $ gcloud components update\n",
+      "To take a quick anonymous survey, run:\n",
+      "  $ gcloud survey\n",
       "\n"
      ]
     }
@@ -137,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d8e7ca81",
    "metadata": {},
    "outputs": [],
