removing the oputs in example file

--- a/Example - Suggest Online.ipynb
+++ b/Example - Suggest Online.ipynb
@@ -11,30 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e7b98237",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting db_dtypes\n",
-      "  Using cached db_dtypes-1.0.5-py2.py3-none-any.whl (14 kB)\n",
-      "Requirement already satisfied: packaging>=17.0 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from db_dtypes) (22.0)\n",
-      "Collecting pyarrow>=3.0.0\n",
-      "  Using cached pyarrow-11.0.0-cp310-cp310-macosx_10_14_x86_64.whl (24.4 MB)\n",
-      "Requirement already satisfied: numpy<2.0dev,>=1.16.6 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from db_dtypes) (1.24.2)\n",
-      "Requirement already satisfied: pandas<2.0dev,>=0.24.2 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from db_dtypes) (1.5.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from pandas<2.0dev,>=0.24.2->db_dtypes) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from pandas<2.0dev,>=0.24.2->db_dtypes) (2022.7.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/yyoo/opt/anaconda3/envs/diff_finder/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas<2.0dev,>=0.24.2->db_dtypes) (1.16.0)\n",
-      "Installing collected packages: pyarrow, db_dtypes\n",
-      "Successfully installed db_dtypes-1.0.5 pyarrow-11.0.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#possible libraries to install before using the diff-finder library. \n",
     "#They will be included in the requirement for the package later\n",
@@ -65,39 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "908c99e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your browser has been opened to visit:\n",
-      "\n",
-      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=jHZRkQK1FZpVasjraEtdC6qirAMrGs&access_type=offline&code_challenge=c5aocpEEAsHB6owgjdubYwe0qdYELjqcAhDuqoIqcQU&code_challenge_method=S256\n",
-      "\n",
-      "\n",
-      "Application default credentials (ADC) were updated.\n",
-      "\n",
-      "You are now logged in as [ysmith@mozilla.com].\n",
-      "Your current project is [mozdata].  You can change this setting by running:\n",
-      "  $ gcloud config set project PROJECT_ID\n",
-      "\n",
-      "\n",
-      "To take a quick anonymous survey, run:\n",
-      "  $ gcloud survey\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gcloud auth login --update-adc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d8e7ca81",
    "metadata": {},
    "outputs": [],
@@ -121,25 +79,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2645f385",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "offline    10087\n",
-       "online     10050\n",
+       "offline    29864\n",
+       "online     23183\n",
        "Name: segment, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_from_bq.segment.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bc7cf57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_from_bq.head()"
    ]
   },
   {
